fixed horizontal overflow that shows up in mobile screen size

--- a/src/components/step.css
+++ b/src/components/step.css
@@ -2,13 +2,13 @@
 
 .steps__container {
   position: relative;
-  min-height: calc(100vh - 16rem);
+  min-height: calc(100vh - 14rem);
   border: 1px solid transparent;
 }
 
 .steps {
   padding: 2rem 1.5rem;
-  width: 90%;
+  width: 95%;
   margin: -5rem auto 0;
   border-radius: 0.5rem;
   background-color: var(--White);
@@ -140,8 +140,8 @@ input:focus {
 /* step 2 */
 .plan {
   position: relative;
-  height: 4.8rem;
   margin-bottom: 0.5rem;
+  height: 84.32px;
 }
 
 .plan input {
@@ -162,13 +162,12 @@ input:checked ~ .plan__tile {
 .plan__tile {
   height: 100%;
   width: 100%;
-
   display: flex;
-  gap: 1rem;
   align-items: center;
+  gap: 1rem;
   border: 1px solid var(--Light-gray);
   border-radius: 0.5rem;
-  padding: 0 1rem;
+  padding: 0.8rem 1rem;
 }
 
 .plan__tile:hover {
@@ -186,6 +185,7 @@ input:checked ~ .plan__tile {
 .gift__text {
   color: var(--Marine-blue);
   font-weight: 500;
+  font-size: 0.9rem;
 }
 
 .period__toggle__container {
@@ -337,7 +337,6 @@ input:checked ~ .plan__tile {
 }
 
 /* summary */
-
 .summary__container {
   padding-block: 2rem;
   text-align: center;
@@ -360,6 +359,12 @@ input:checked ~ .plan__tile {
   color: var(--Cool-gray);
 }
 
+@media screen and (min-width: 40rem) {
+  .steps {
+    width: 86%;
+  }
+}
+
 @media screen and (min-width: 60rem) {
   .container .steps__container {
     height: 100%;
@@ -372,10 +377,45 @@ input:checked ~ .plan__tile {
     padding: 5rem 3rem;
   }
 
+  /* step 2 */
+  .plan {
+    height: fit-content;
+    flex: 1;
+    width: 100%;
+  }
+  .plans__radioBtn__container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    align-items: start;
+    justify-content: start;
+    gap: 0.8rem;
+  }
+
+  .plan__tile {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    padding: 1rem;
+    margin-top: 1rem;
+  }
+
+  .plan__tile h4 {
+    margin-top: 1.5rem;
+  }
+
+  .period__toggle__container {
+    margin-top: 2rem;
+  }
+
   /* button */
   .button__container {
     bottom: 0;
     width: 100%;
     padding-inline: 3rem;
+  }
+
+  .btn {
+    font-size: 1rem;
+    padding: 0.8rem 1.5rem;
   }
 }
